ver1/network-policy/mysql-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress-to-database
  namespace: database
spec:
  podSelector:
    matchLabels:
      app: mysql-app
  policyTypes:
  - Ingress
  ingress: []
