ver1/network-policy/mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-allow-admin-client
  namespace: database
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
  - Ingress
  ingress:
  - from:
    # - podSelector:
    #     matchLabels:
    #       app: admin-app
    #       tier: frontend
    # - podSelector:
    #     matchLabels:
    #       app: client-app
    #       tier: frontend
    ports:
    - protocol: TCP
      port: 3306
